# autographe

./: .gitignore  .swift-format  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Package.resolved  Package.swift  README.md
Sources/AutographeCore/: AutographeCore.swift  EditorModel.swift  Mode.swift
Sources/AutographeUI/: AutographeApp.swift  ContentView.swift
Sources/AutographeUI/Resources/: Info.plist
Tests/AutographeCoreTests/: ModeTests.swift
crates/autographe-core/: Cargo.toml
crates/autographe-core/src/: lib.rs
crates/autographe-iced/: Cargo.toml
crates/autographe-iced/src/: main.rs
src/: main.rs
