[package]
name = "autographe-iced"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = [ "Wassim Mansouri <wassim@autographe.app>" ]

[dependencies]
autographe-core = { path = "../autographe-core" }
iced = "0.14"
anyhow = { workspace = true }
tracing = { workspace = true }

